# dioxus-dnd

./: .gitignore  .inspect.tmp.js  .rumdl.toml  CHANGELOG.md  Cargo.toml  DESKTOP-ARCHITECTURE-RECONCILIATION-REVIEW.md  DESKTOP-DIOXUS-0.7-REVIEW.md  Dioxus.toml  LICENSE-MIT  PLATFORMS.md  README.md  RELEASING.md  ROADMAP.md  TODO.md  deny.toml  package-lock.json  package.json  playwright.config.js
.codex/plan/: keyboard-placement-policy.md  repo-audit.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml  upstream-canary.yml
docs/: API_AUDIT.md  BLITZ-TRACKING-ISSUE.md  NATIVE_HTML_DRAG_AUDIT.md  README.md  RENDERER-CONTRACT.md
docs/api/: accessibility.md  animation.md  autoscroll.md  boards.md  canvas.md  core.md  debugging.md  drag-and-drop.md  drag-out.md  drop-effects.md  external-content.md  file-drops.md  localization.md  mixing-payload-types.md  multi-window.md  multiselect.md  sortable-lists.md  testing.md  trees.md
docs/concepts/: accessibility.md  animation.md  architecture.md  autoscroll.md  boards.md  canvas.md  debugging.md  drag-and-drop.md  drag-out.md  drop-effects.md  external-content.md  file-drops.md  localization.md  mixing-payload-types.md  multi-window.md  multiselect.md  sortable-lists.md  styling.md  testing.md  touch-and-input.md  trees.md  virtualized-lists.md
docs/superpowers/plans/: 2026-07-10-desktop-showcase.md
docs/superpowers/specs/: 2026-07-10-desktop-showcase-design.md
examples/: canvas.rs  gallery.rs  kanban.rs  regressions.rs  showcase.rs  tailwind.rs
examples/desktop-multiwindow/: Cargo.toml
examples/desktop-multiwindow/src/: main.rs
examples/desktop-showcase/: Cargo.toml  README.md  run-wsl.sh
examples/desktop-showcase/src/: layout.rs  main.rs  model.rs  theme.rs  ticker.rs
examples/desktop-showcase/src/widgets/: mod.rs  pulse.rs  ring.rs  sparkline.rs  stopwatch.rs
examples/gallery/: main.rs  ui.rs
examples/gallery/pages/: archive.rs  itinerary.rs  mailbox.rs  menu.rs  mod.rs  moodboard.rs  newsletter_builder.rs  packing_list.rs  photo_album.rs  playlist.rs  podcast_queue.rs  project_files.rs  reading_list.rs  share.rs  shuffle.rs  sprint_board.rs  standup.rs  upload.rs  weekly_focus.rs
src/: a11y.rs  animate.rs  autoscroll.rs  board.rs  canvas.rs  debug.rs  desktop.rs  dragout.rs  external.rs  files.rs  grid.rs  lib.rs  multiselect.rs  pointer.rs  sortable.rs  test.rs  tree.rs
src/core/: components.rs  hooks.rs  machine.rs  mod.rs  model.rs  modifiers.rs  platform.rs  registry.rs  session.rs  state.rs  strings.rs  types.rs  viewport.rs  world.rs
src/core/components/: delivery.rs  draggable.rs  drop_zone.rs  mod.rs  overlay.rs  pointer.rs  provider.rs
src/core/world/: drag.rs  geometry.rs  host.rs  joined.rs  mod.rs  settle.rs  state.rs
src/desktop/: bridge.rs  feed.rs  mod.rs  provider.rs
src/desktop/platform/: fallback.rs  linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
tests/: multiwindow.rs  multiwindow_seam.rs  runtime.rs  typed_transport.rs
tests/browser/: flip.spec.js  focus.spec.js  match-source.spec.js  touch-sensor.spec.js  typed-transport.spec.js  web-pointer-regressions.spec.js
